--- a/src/component/CourseItem/CourseItem.module.scss
+++ b/src/component/CourseItem/CourseItem.module.scss
@@ -75,16 +75,19 @@
 }
 
 .creator{
-
+	display: flex;
 	margin: 10px;
+}
 
-	img{
-		width: 40px;
-		border-radius: 50%;
-		margin-right: 20px;
-	}
+.avatar {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	margin-right: 10px;
+}
 
-	span{
-		font-weight: bold;
-	}
+.fullname-course {
+	display: flex;
+	font-weight: bold;
+	align-items: center;
 }
