--- a/src/component/Layout/DefaultLayout/Sidebar/Sidebar.module.scss
+++ b/src/component/Layout/DefaultLayout/Sidebar/Sidebar.module.scss
@@ -23,6 +23,10 @@
 	margin: 15px 0;
 	padding: 15px 0;
 	border-radius: 25px;
+
+	&.active {
+		background-color: #e8ebed;
+	}
 }
 
 .sidebar-item span {
@@ -30,6 +34,3 @@
 	font-weight: 600;
 }
 
-.active{
-	background-color: #e8ebed;
-}
