--- a/src/pages/BlogDetail/BlogDetail.module.scss
+++ b/src/pages/BlogDetail/BlogDetail.module.scss
@@ -15,15 +15,20 @@
 	width: 100%;
 	padding-bottom: 35px;
 	border-bottom: 1px solid rgb(204, 201, 201);
+	display: flex;
 
-	img {
+	.avatar {
 		width: 40px;
 		border-radius: 50%;
 		margin-right: 20px;
+		height: 40px;
+		object-fit: contain;
 	}
 
-	span {
+	.fullname {
 		font-weight: bold;
+		display: flex;
+		align-items: center;
 	}
 }
 
