--- a/src/pages/Recruitment/Recruitment.module.scss
+++ b/src/pages/Recruitment/Recruitment.module.scss
@@ -21,4 +21,24 @@
 	position: fixed;
 	bottom: 80px;
 	right: 100px;
+	z-index: 101;
+}
+
+.option {
+	display: flex;
+	align-items: center;
+	background-color: #ededed;
+	padding: 10px 15px;
+	border-radius: 30px;
+	margin-bottom: 15px;
+}
+
+.add-lesson {
+	width: 160px;
+	margin: 0 10px;
+	font-weight: 500;
+}
+
+.button_learn{
+	margin: 0 10px;
 }
